cleans up imports, fixes overflow during transitions

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -34,6 +34,7 @@
 
 body {
   margin: 0;
+  overflow-x: clip;
 }
 
 .button {
